syntax = "proto2";

option java_package = "com.proto";
option java_outer_classname = "EnterGame";

//场景传送
message MceEnterGame {
	
}
