syntax = "proto2";

option java_package = "com.proto";

//舰船部件信息
message MShipPart 
{    
	optional int32 level = 1;
    
	repeated int32   prop = 2;
    
	repeated  int32  value = 3;
}

//舰船信息


message MseShipInfo
{    
	optional int64 oid = 1;
    
	optional int32   tid = 2;
    
	optional int32  level = 3;
    
	repeated MShipPart ship_part = 4 ;
    
	optional int64 hp_recover = 5 ;
    
	optional int64 max_power = 6 ;
    
	optional int64 load = 7;

    	
	optional int64 max_speed = 8;
    
	optional int64  accelerated_speed = 9;
    
	optional int64 turn_radius = 10;
    
	optional int64 max_hp = 11 ;
    
	optional int64 attack = 12 ;    
	optional int64 armor = 13 ;    
	optional int64 hit = 14 ;
	optional int64 dodge = 15 ;
	optional int64 critical = 16 ;
	optional int64 critical_resistance = 17 ;
	optional int64 damage_blast = 18 ;
	optional int64 damage_kinetic = 19 ;
	optional int64 damage_heat = 20 ;
	optional int64 resistance_blast = 21 ;
	optional int64 resistance_kinetic = 22 ;
	optional int64 resistance_heat = 23 ;
	optional int64 absolute_hp = 24 ;
	optional int64 absolute_attack = 25 ;
	optional int64 absolute_armor = 26 ;
	optional int64 absolute_hit = 27 ;
	optional int64 absolute_dodge = 28 ;
	optional int64 absolute_critical = 29 ;
	optional int64 absolute_critical_resistance = 30 ;
	optional int64 critical_damage = 31 ;
	optional int64 critical_reduce = 32 ;
	optional int64 damage_amplify = 33 ;
	optional int64 damage_reduce = 34 ;
	optional int32 suitid = 35;
	optional int64 fight_cap = 36;
}
